--- a/starter/critter/pom.xml
+++ b/starter/critter/pom.xml
@@ -35,10 +35,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.projectlombok</groupId> -->
+<!-- 			<artifactId>lombok</artifactId> -->
+<!-- 			        <version>1.18.20</version> -->
+<!--         <scope>provided</scope> -->
+<!-- 		</dependency> -->
 		
 		<dependency>
 			<groupId>mysql</groupId>
