commented prop for log

--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode = always
 spring.jpa.hibernate.ddl-auto = create-drop
+
+
+
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate= ERROR
+
+#spring.application.name=<your app name here>
+#logging.level.=ERROR
+#logging.file=${java.io.tmpdir}/${spring.application.name}.log
