dummy select employee

--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -12,8 +12,10 @@ spring.datasource.password=sa1234
 # uncomment the below lines to view sql output in console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.initialization-mode = always
-spring.jpa.hibernate.ddl-auto = create-drop
+
+
+#spring.datasource.initialization-mode = always
+#spring.jpa.hibernate.ddl-auto = create-drop
 
 
 
