employee - validate req body + add multi exceptions

--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -15,7 +15,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 #spring.datasource.initialization-mode = always
-#spring.jpa.hibernate.ddl-auto = create-drop  #update
+#spring.jpa.hibernate.ddl-auto = create-drop  
+#update
 
 
 
