--- a/starter/critter/pom.xml
+++ b/starter/critter/pom.xml
@@ -38,10 +38,15 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-<!-- 			        <version>1.18.20</version> -->
-        <scope>provided</scope>
+			<!-- <version>1.18.20</version> -->
+			<scope>provided</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
