--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -14,15 +14,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-#spring.datasource.initialization-mode = always
-#spring.jpa.hibernate.ddl-auto = create-drop  
+spring.datasource.initialization-mode = always
+spring.jpa.hibernate.ddl-auto = create-drop  
 #update
-
-
-
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.hibernate= ERROR
-
-#spring.application.name=<your app name here>
-#logging.level.=ERROR
-#logging.file=${java.io.tmpdir}/${spring.application.name}.log
